src/main/java/org/example/eventplanner/error/ExceptionResponse.java
package org.example.eventplanner.error;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.stereotype.Component;

@Component
@Data
@AllArgsConstructor
@NoArgsConstructor
public class ExceptionResponse {
    private String code;
    private String message;
}
